# lod-berlin-basetheme

./: MANIFEST.in  README.md  pyproject.toml
berlin/lod/basetheme/assets/: style.css
berlin/lod/basetheme/templates/: base.html.jinja  dataset.html.jinja  mermaid_statements_graph.html.jinja
