[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "lod-berlin-base-templates"
version = "0.0.1"
description = "A set of base Jinja templates for static LOD sites"
authors = [{ name = "Knud Möller", email = "knud.moeller@berlinonline.de" }]
license = "MIT"
license-files = [ "LICENSE" ]
readme = "README.md"
